--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,5 @@
+<head>
+    <!-- https://web.dev/responsive-web-design-basics/ -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <app></app>
