resume module; resume service

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <head>
     <!-- https://web.dev/responsive-web-design-basics/ -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<app></app>
+<html lang="en">
+    <app></app>
+</html>
