--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <html lang="en">
-    <app></app>
+    <site></site>
 </html>
