add favicon; prettier; strictTemplates for angular langauge service

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <head>
-    <!-- https://web.dev/responsive-web-design-basics/ -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- https://web.dev/responsive-web-design-basics/ -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <html lang="en">
-    <site></site>
+  <site></site>
 </html>
