--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html lang="en"><head><script src="runtime.e6e7f711df5e3c51.js" type="module"></script><script src="polyfills.d8668f8218fc6b8e.js" type="module"></script><script src="main.2b8515bc74a88975.js" type="module"></script>
+<html lang="en"><head><script src="runtime.0169e915a3e63583.js" type="module"></script><script src="polyfills.ebecb085d9ad9f0c.js" type="module"></script><script src="main.478372aec864bca4.js" type="module"></script>
+  <!-- https://web.dev/responsive-web-design-basics/ -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>html{font-family:"Liberation Serif Regular";font-size:medium;display:flex;flex-direction:column}body{display:flex;flex-direction:column;margin:0}body *{display:flex;flex-direction:column;word-break:break-word;box-sizing:border-box;max-width:100%}</style><link rel="stylesheet" href="styles.a2229ed41b6d5193.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a2229ed41b6d5193.css"></noscript></head>
 
-    <!-- https://web.dev/responsive-web-design-basics/ -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>html{display:flex;font-family:"Liberation Serif Regular"}html *{max-height:1000000rem;word-break:break-word}body{display:flex;flex-direction:column;flex:1 auto;margin:0}body *{display:flex}</style><link rel="stylesheet" href="styles.21707b5a6c4aad80.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.21707b5a6c4aad80.css"></noscript></head>
+  <body><site></site>
 
-    <body><site></site>
 </body></html>
